# sporthive-api-scraper

./: .env.template  README.md  main.py  pyproject.toml  sporthive_api_scraper.py
data/: 6855879561074155264_480016.json  6914931831426482176_481627.json
